--- a/README
+++ b/README
@@ -1,1 +1,26 @@
 This file was created by IntelliJ IDEA 12.0.4 for binding GitHub repository
+
+KGEM (Top down approach) v.0.10
+Basic functionality:
+
+Read file with aligned reads (.sam).
+Initialize population as random sample of fixed size from this reads.
+
+Consequently repeat KGEM steps until convergence:
+    1. Rounding
+    2. Frequency estimation (FEM)
+    3. Allele frequency estimation (KGEM)
+
+Output corrected haplotypes in fasta format.
+--------
+New features v0.10:
+- KGEM steps include threshold clean step:
+    Drop all genotypes with frequency less than threshold level (Default 0.05%)
+
+- Monte Carlo series of experiments support implemented:
+    Run the whole procedure n times and select haplotypes which appeared at least m times
+    (Default n:4, m:3)
+
+example of usage:
+
+java -jar KGEM.jar reads.sam -k 50 -mcn 4 -mcm 3 -tr 0.05
