--- a/README
+++ b/README
@@ -29,4 +29,4 @@ features v0.10:
 
 example of usage:
 
-java -jar KGEM.jar reads.sam -k 50 -mcn 4 -mcm 3 -tr 0.05
+java -jar KGEM.jar reads.sam -k 50 -tr 5
